fix images links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span class="icon-burger" id="menu__btn"></span>
                 <ul class="menu" id="menu">
                     <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inicio</a></li>
-                    <li class="menu__item"><a href="./views/extras.html" class="menu__link">Extras</a></li>
+                    <li class="menu__item"><a href="./extras.html" class="menu__link">Extras</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">Galería</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">Contacto</a></li>
                 </ul>
@@ -46,7 +46,7 @@
         </nav>
 
         <section class="banner">
-            <img src="./assets/img/pink-cake.jpg" alt="Pastel rosa" class="banner__img">
+            <img src="./assets/img/pink-cake.jpg" alt="" class="banner__img">
             <div class="banner__content">Para crear momentos deliciosamente memorables.</div>
         </section>
 
@@ -60,7 +60,7 @@
             <section class="main__about--description">
                 <div class="container container--flex">
                     <div class="column column--50">
-                        <img src="./assets/img/fruit-cake.jpg" alt="Fruit Cake" class="imgg">
+                        <img src="./assets/img/fruit-cake.jpg" alt="" class="imgg">
                     </div>
                     <div class="column column--50">
                         <h3 class="column__title">Expertos en conmemorar historias.</h3>
