create link to extras

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <img src="./assets/img/ultra-chocolate-cake.jpg" alt="" class="special__img">
                         <div class="special__title">Pastel individual</div>
                         <div class="special__price">$99.99</div>
-                        <a href="" class="btn btn--contact">Comprar</a>
+                        <a href="./extras.html" class="btn btn--contact">Comprar</a>
                     </div>
                 </div>
             </section> 
