--- a/extras.html
+++ b/extras.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,600&family=Satisfy&display=swap" rel="stylesheet">   
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+        <link rel="stylesheet" type="text/css" href="../styles/extras.css">
         <title>Extras | Candy </title>
     </head>
     <body>
